--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<div class="flex-container">
 						<div class="flex-item left">
 
-							<h2><a href="http://folio.cbtnuggets.com" target="_blank">Folio</a></h2>
+							<h2><a href="http://folio.cbtnuggets.com" target="_blank">Mockfolio</a></h2>
 							<p>02.2017</p>
 							<p>Design presentation tool</p>
 							<!-- <p><a href="http://folio.cbtnuggets.com">Launch</a></p> -->
