building out portfolio items

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<body onload="today()">
 		<div class="wrap">
 
-			<div class="card">
+			<div class="card home">
 				<div class="name">
 					<h1>Chris Eddie</h1>
 					<h2>Product Designer</h2>
@@ -28,7 +28,7 @@
 							If you'd like to say hello, shoot me an <a href="mailto:hello@chriseddie.com">email</a>.
 						</p>
 
-						<hr>
+						<hr class="lead-hr">
 
 				</div>
 
@@ -36,10 +36,10 @@
 
 					<div class="flex-container">
 					  <div class="flex-item"></div>
-					  <div class="flex-item-timeline"><a href="https://cbtnuggets.com" target="_blank"><div class="job-circle"></div></a></div>
+					  <div class="flex-item-timeline"><a href="cbtn.html"><div class="job-circle"></div></a></div>
 					  <div class="flex-item">
 
-							<a href="https://cbtnuggets.com" target="_blank"><img class="logo" src="images/cbtnuggets.svg"></a>
+							<a href="cbtn.html"><img class="logo" src="images/cbtnuggets.svg"></a>
 							<p>2014 - Present</p>
 							<p>Principal Product Designer</p>
 							<!-- <p><a href="#">Work</a></p> -->
@@ -69,7 +69,7 @@
 
 							<h2><a href="https://renafitness.com" target="_blank">ReNA Fitness</a></h2>
 							<p>04.2014</p>
-							<p>Fitness studio and app system</p>
+							<p>Fitness platform</p>
 							<!-- <p><a href="#">Work</a></p> -->
 
 						</div>
@@ -92,12 +92,12 @@
 
 					<div class="flex-container">
 						<div class="flex-item left"></div>
-						<div class="flex-item-timeline"><a href="https://itunes.apple.com/us/app/listenlist/id587016868?mt=8" target="_blank"><div class="project-circle"></div></a></div>
+						<div class="flex-item-timeline"><a href="listenlist.html"><div class="project-circle"></div></a></div>
 						<div class="flex-item">
 
-							<h2><a href="https://itunes.apple.com/us/app/listenlist/id587016868?mt=8" target="_blank">Listenlist</a></h2>
+							<h2><a href="listenlist.html">Listenlist</a></h2>
 							<p>09.2011</p>
-							<p>Music discovery app for iOS</p>
+							<p>Music discovery app</p>
 							<!-- <p><a href="#">Work</a></p> -->
 
 						</div>
