--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 						</p>
 
 						<hr class="lead-hr">
+						<h2 class="time-hdr">Projects & Experience</h2>
 
 				</div>
 
@@ -42,7 +43,7 @@
 							<a href="cbtn.html"><img class="logo" src="images/cbtnuggets.svg"></a>
 							<p>2014 - Present</p>
 							<p>Principal Product Designer</p>
-							<!-- <p><a href="#">Work</a></p> -->
+							<p><a href="cbtn.html">View work &#187;</a></p>
 
 						</div>
 					</div>
@@ -51,26 +52,26 @@
 					<div class="flex-container">
 						<div class="flex-item left">
 
-							<h2><a href="http://folio.cbtnuggets.com" target="_blank">Mockfolio</a></h2>
+							<h2><a href="mockfolio.html">Mockfolio</a></h2>
 							<p>02.2017</p>
 							<p>Design presentation tool</p>
-							<!-- <p><a href="http://folio.cbtnuggets.com">Launch</a></p> -->
+							<p><a href="mockfolio.html">View project &#187;</a></p>
 
 						</div>
-						<div class="flex-item-timeline"><a href="http://folio.cbtnuggets.com" target="_blank"><div class="project-circle"></div></a></div>
+						<div class="flex-item-timeline"><a href="mockfolio.html"><div class="project-circle"></div></a></div>
 						<div class="flex-item"></div>
 					</div>
 
 
 					<div class="flex-container">
 						<div class="flex-item left"></div>
-						<div class="flex-item-timeline"><a href="https://renafitness.com" target="_blank"><div class="project-circle"></div></a></div>
+						<div class="flex-item-timeline"><a href="rena.html"><div class="project-circle"></div></a></div>
 						<div class="flex-item">
 
-							<h2><a href="https://renafitness.com" target="_blank">ReNA Fitness</a></h2>
+							<h2><a href="rena.html">ReNA Fitness</a></h2>
 							<p>04.2014</p>
-							<p>Fitness platform</p>
-							<!-- <p><a href="#">Work</a></p> -->
+							<p>Fitness app</p>
+							<p><a href="rena.html">View project &#187;</a></p>
 
 						</div>
 					</div>
@@ -79,13 +80,13 @@
 					<div class="flex-container">
 						<div class="flex-item left">
 
-							<a href="https://google.com" target="_blank"><img class="logo" src="images/google.svg"></a>
+							<a href="google.html"><img class="logo" src="images/google.svg"></a>
 							<p>2013 - 2014</p>
 							<p>UI Designer</p>
-							<!-- <p><a href="#">Work</a></p> -->
+							<p><a href="google.html">View work &#187;</a></p>
 
 						</div>
-						<div class="flex-item-timeline"><a href="https://google.com" target="_blank"><div class="job-circle"></div></a></div>
+						<div class="flex-item-timeline"><a href="google.html"><div class="job-circle"></div></a></div>
 						<div class="flex-item"></div>
 					</div>
 
@@ -98,7 +99,7 @@
 							<h2><a href="listenlist.html">Listenlist</a></h2>
 							<p>09.2011</p>
 							<p>Music discovery app</p>
-							<!-- <p><a href="#">Work</a></p> -->
+							<p><a href="listenlist.html">View project &#187;</a></p>
 
 						</div>
 					</div>
@@ -107,26 +108,26 @@
 					<div class="flex-container">
 						<div class="flex-item left">
 
-							<a href="https://www.amazon.com/Amazon-Music-Apps/b?ie=UTF8&node=2658409011" target="_blank"><img class="logo" src="images/amazon.svg"></a>
+							<a href="amazon-music.html"><img class="logo" src="images/amazon.svg"></a>
 							<p>2012 - 2013</p>
 							<p>UX Designer</p>
-							<!-- <p><a href="#">Work</a></p> -->
+							<p><a href="amazon-music.html">View work &#187;</a></p>
 
 						</div>
-						<a href="https://www.amazon.com/Amazon-Music-Apps/b?ie=UTF8&node=2658409011" target="_blank"><div class="flex-item-timeline"><div class="job-circle"></div></a></div>
+						<a href="amazon-music.html"><div class="flex-item-timeline"><div class="job-circle"></div></a></div>
 						<div class="flex-item"></div>
 					</div>
 
 
 					<div class="flex-container">
 						<div class="flex-item"></div>
-						<a href="https://amazon.com" target="_blank"><div class="flex-item-timeline"><div class="job-circle"></div></a></div>
+						<a href="amazon.html"><div class="flex-item-timeline"><div class="job-circle"></div></a></div>
 						<div class="flex-item">
 
-							<a href="https://amazon.com" target="_blank"><img class="logo" src="images/amazoncom.svg"></a>
+							<a href="amazon.html"><img class="logo" src="images/amazoncom.svg"></a>
 							<p>2011 - 2012</p>
 							<p>UX Designer</p>
-							<!-- <p><a href="#">Work</a></p> -->
+							<p><a href="amazon.html">View work &#187;</a></p>
 
 						</div>
 					</div>
@@ -135,12 +136,13 @@
 					<div class="flex-container">
 						<div class="flex-item left">
 
-							<a href="https://musiciansfriend.com" target="_blank"><img class="logo png" src="images/musicians.png"></a>
+							<a href="mf.html"><img class="logo png" src="images/musicians.png"></a>
 							<p>2008 - 2011</p>
 							<p>UX Designer</p>
+							<p><a href="mf.html">View work &#187;</a></p>
 
 						</div>
-						<a href="https://musiciansfriend.com" target="_blank"><div class="flex-item-timeline"><div class="job-circle"></div></a></div>
+						<a href="mf.html"><div class="flex-item-timeline"><div class="job-circle"></div></a></div>
 						<div class="flex-item"></div>
 					</div>
 
@@ -153,7 +155,7 @@
 							<a href="http://www.toothandnail.com/artists/6/A_Dream_Too_Late/" target="_blank"><img class="logo png" src="images/toothandnail.png"></a>
 							<p>2006 - 2008</p>
 							<p>Recording Artist</p>
-							<!-- <p><a href="#">Work</a></p> -->
+							<p><a href="http://www.toothandnail.com/artists/6/A_Dream_Too_Late/">View work &#187;</a></p>
 
 						</div>
 					</div>
