--- a/listenlist.html
+++ b/listenlist.html
@@ -21,45 +21,43 @@
 						<a href="index.html">chriseddie.com</a> <span class="crumb"> / </span> Listenlist
 					</p>
 
+					<h1>Listenlist</h1>
+
 					<p>
-						Hey, I’m Chris, a designer from Oregon. I work at <a href="https://www.cbtnuggets.com/" target="_blank">CBT Nuggets</a>, helping people accomplish their dreams through online education. Before that, I worked at <a href="https://google.com" target="_blank">Google</a> on Search and <a href="https://amazon.com" target="_blank">Amazon</a> on their music apps before that. I’m passionate about building technology that changes people’s lives and designing experiences that are functional and beautiful.
-					</p>
-					<br>
-					<p>
-						If you'd like to say hello, shoot me an <a href="mailto:hello@chriseddie.com">email</a>.
+						Listenlist began as a “scratch your own itch” project to provide a solution for keeping track of serendipitous music discoveries and word of mouth recommendations. Users could search for an artist and add results to a simple todo list where photos and biographies were pulled in from Last.fm and fully streamable discographies were retrieved from the iTunes music database.
 					</p>
 
 					<hr class="lead-hr">
 
 					<img class="img" src="images/listenlist-app.jpg">
 					<hr>
-					<p class="fig">lorem ipsum dolar saint</p>
+					<p class="fig">Apple App Store screenshots.</p>
 
 					<br>
 					<p>
-						Hey, I’m Chris, a designer from Oregon. I work at <a href="https://www.cbtnuggets.com/" target="_blank">CBT Nuggets</a>, helping people accomplish their dreams through online education. Before that, I worked at <a href="https://google.com" target="_blank">Google</a> on Search and <a href="https://amazon.com" target="_blank">Amazon</a> on their music apps before that. I’m passionate about building technology that changes people’s lives and designing experiences that are functional and beautiful.
+						Product development started with a simple user story which was then adopted to a canonical flow diagram which mapped out the entire experience. This document was used to flesh out architecture and communicate with my developer, identifying areas where API calls, authentication or other server-side information would be necessary.
 					</p>
 
 					<hr class="lead-hr">
 
 					<img class="img" src="images/listenlist-flow.jpg">
 					<hr>
-					<p class="fig">lorem ipsum dolar saint</p>
+					<p class="fig">Canonical flow diagram</p>
 
 					<br>
 					<p>
-						Hey, I’m Chris, a designer from Oregon. I work at <a href="https://www.cbtnuggets.com/" target="_blank">CBT Nuggets</a>, helping people accomplish their dreams through online education. Before that, I worked at <a href="https://google.com" target="_blank">Google</a> on Search and <a href="https://amazon.com" target="_blank">Amazon</a> on their music apps before that. I’m passionate about building technology that changes people’s lives and designing experiences that are functional and beautiful.
+						I designed out high fidelity mockups for each screen and various screen states, such as missing endpoints, no search results, empty list and error states. I then created prototypes using FramerJS to illustrate micro-interactions such as context menus and interface transitions. These were used to communicate animation and movement details to my developer.
 					</p>
 
 					<hr class="lead-hr">
 
 					<img class="img" src="images/listenlist-screens.jpg">
 					<hr>
-					<p class="fig">lorem ipsum dolar saint</p>
+					<p class="fig">High fidelity mockups for each screen.</p>
 
 					<br>
 					<p>
-						Hey, I’m Chris, a designer from Oregon. I work at <a href="https://www.cbtnuggets.com/" target="_blank">CBT Nuggets</a>, helping people accomplish their dreams through online education. Before that, I worked at <a href="https://google.com" target="_blank">Google</a> on Search and <a href="https://amazon.com" target="_blank">Amazon</a> on their music apps before that. I’m passionate about building technology that changes people’s lives and designing experiences that are functional and beautiful.
+						My designs were then documented in a specification document which showed each screen and it’s various states in detail and explained functionality and behaviors in a comprehensive set of annotations. This document was used by my developer to build the application.
 					</p>
 
 					<hr class="lead-hr">
@@ -71,8 +69,20 @@
 					<br>
 
 					<p>
-						<b>What I learned</b><br>
-						Hey, I’m Chris, a designer from Oregon. I work at <a href="https://www.cbtnuggets.com/" target="_blank">CBT Nuggets</a>, helping people accomplish their dreams through online education. Before that, I worked at <a href="https://google.com" target="_blank">Google</a> on Search and <a href="https://amazon.com" target="_blank">Amazon</a> on their music apps before that. I’m passionate about building technology that changes people’s lives and designing experiences that are functional and beautiful.
+						We launched Listenlist to the Apple App Store in 2011 and made a small splash among audiophile publications. Shortly after we sold our name and brand to another app developer with the same name (formally, Listn) and rebranded as Listenlist. The app is still available on the App Store today.
+					</p>
+
+					<hr class="lead-hr">
+
+					<br>
+
+					<p>
+						<b>Date:</b> September 2011 - January 2014<br>
+						<b>Company:</b> Arboreal, LLC<br>
+						<b>Project:</b> Listenlist (fka Listn)<br>
+						<b>Role:</b> Co-Founder / Design<br>
+						<b>Team:</b> Isaac Overacker: Co-Founder / Development
+
 					</p>
 
 
