--- a/cbtn.html
+++ b/cbtn.html
@@ -21,64 +21,167 @@
 						<a href="index.html">chriseddie.com</a> <span class="crumb"> / </span> CBT Nuggets
 					</p>
 
+					<h1>CBTN Training Apps</h1>
+
 					<p>
-						Hey, I’m Chris, a designer from Oregon. I work at <a href="https://www.cbtnuggets.com/" target="_blank">CBT Nuggets</a>, helping people accomplish their dreams through online education. Before that, I worked at <a href="https://google.com" target="_blank">Google</a> on Search and <a href="https://amazon.com" target="_blank">Amazon</a> on their music apps before that. I’m passionate about building technology that changes people’s lives and designing experiences that are functional and beautiful.
-					</p>
-					<br>
-					<p>
-						If you'd like to say hello, shoot me an <a href="mailto:hello@chriseddie.com">email</a>.
+						The mission of CBT Nuggets is to ”continually improve the learning experience for IT professionals.” Part of the strategy in accomplishing that mission is providing ubiquitous access to learning content on any device, anytime, anywhere. I worked as the sole end-to-end designer on 5 native applications from conception to launch with the goals of <b>increasing engagement</b> and customer <b>renewel rate</b>.
 					</p>
 
 					<hr class="lead-hr">
 
-					<img class="img" src="images/listenlist-app.jpg">
+					<img class="img" src="images/cbt-platforms.jpg">
 					<hr>
-					<p class="fig">lorem ipsum dolar saint</p>
+					<p class="fig">Windows (UWP), iOS (mobile and tablet), Android (mobile and tablet), TVOS and Roku.</p>
 
 					<br>
 					<p>
-						Hey, I’m Chris, a designer from Oregon. I work at <a href="https://www.cbtnuggets.com/" target="_blank">CBT Nuggets</a>, helping people accomplish their dreams through online education. Before that, I worked at <a href="https://google.com" target="_blank">Google</a> on Search and <a href="https://amazon.com" target="_blank">Amazon</a> on their music apps before that. I’m passionate about building technology that changes people’s lives and designing experiences that are functional and beautiful.
+						Knowing that continued education and certification prep is key for IT professionals, we learned that <b>providing access to content on the go</b> and the ability to <b>view content offline</b> would increase how often learners train and the probability that they would renew their subscriptions.
 					</p>
 
 					<hr class="lead-hr">
 
-					<img class="img" src="images/listenlist-flow.jpg">
+					<img class="img" src="images/cbt-ios-screens.jpg">
 					<hr>
-					<p class="fig">lorem ipsum dolar saint</p>
+					<p class="fig">Learners can pick up where they left off and download content for offline viewing. (iOS)</p>
 
 					<br>
 					<p>
-						Hey, I’m Chris, a designer from Oregon. I work at <a href="https://www.cbtnuggets.com/" target="_blank">CBT Nuggets</a>, helping people accomplish their dreams through online education. Before that, I worked at <a href="https://google.com" target="_blank">Google</a> on Search and <a href="https://amazon.com" target="_blank">Amazon</a> on their music apps before that. I’m passionate about building technology that changes people’s lives and designing experiences that are functional and beautiful.
+						The UI was built upon a Material-like card metaphor. This created a modality for content that could easily scale between web, mobile, tablet and desktop platforms.
 					</p>
 
 					<hr class="lead-hr">
 
-					<img class="img" src="images/listenlist-screens.jpg">
+					<img class="img" src="images/cbt-cards.jpg"></a>
 					<hr>
-					<p class="fig">lorem ipsum dolar saint</p>
+					<p class="fig">Card metephor scales seamlessly between platforms.</p>
 
 					<br>
+
 					<p>
-						Hey, I’m Chris, a designer from Oregon. I work at <a href="https://www.cbtnuggets.com/" target="_blank">CBT Nuggets</a>, helping people accomplish their dreams through online education. Before that, I worked at <a href="https://google.com" target="_blank">Google</a> on Search and <a href="https://amazon.com" target="_blank">Amazon</a> on their music apps before that. I’m passionate about building technology that changes people’s lives and designing experiences that are functional and beautiful.
+						Illustrations were meant to add a visually unique identity for each course, but were purposely designed to act as simplistically subdued background elements.
 					</p>
 
 					<hr class="lead-hr">
 
-					<a href="https://itunes.apple.com/us/app/listenlist/id587016868?mt=8" target="_blank"><img class="img" src="images/test.jpg"></a>
+					<img class="img" src="images/cbt-quiz.jpg"></a>
 					<hr>
-					<p class="fig">Listenlist is available on the <a href="https://itunes.apple.com/us/app/listenlist/id587016868?mt=8" target="_blank">App Store</a> today.</p>
+					<p class="fig">Learners answer quiz questions to validate what they've learned. (Android)</p>
 
 					<br>
 
 					<p>
-						<b>What I learned</b><br>
-						Hey, I’m Chris, a designer from Oregon. I work at <a href="https://www.cbtnuggets.com/" target="_blank">CBT Nuggets</a>, helping people accomplish their dreams through online education. Before that, I worked at <a href="https://google.com" target="_blank">Google</a> on Search and <a href="https://amazon.com" target="_blank">Amazon</a> on their music apps before that. I’m passionate about building technology that changes people’s lives and designing experiences that are functional and beautiful.
+						The 10' experience for TVOS and Roku adopted an inverted interface to better embrace the platforms and reduce visual fatigue on brighter and larger displays often found in a darker setting.
+					</p>
+
+					<hr class="lead-hr">
+
+					<img class="img" src="images/cbt-tvos.jpg"></a>
+					<hr>
+					<p class="fig">TVOS Design.</p>
+
+					<br>
+
+					<p>
+						Beginning with the brand color, Nugget Gold, I extracted a primary accent color using triads on the color wheel. The remaining 4 colors were derived by calculating a similar distance in each RGB direction.<br><br>
+
+						A monoline iconography style was designed to be lightweight, simple and easily scalable across multiple device platforms.
+					</p>
+
+					<hr class="lead-hr">
+
+					<img class="img" src="images/cbt-color.jpg"></a>
+					<hr>
+					<p class="fig">Color and iconography systems.</p>
+
+					<br>
+
+					<p>
+						Development was supported by 3 primary artifacts: A comprehensive design specification document, a collection of prototypes and an internal documentation of the design system.
+					</p>
+
+					<hr class="lead-hr">
+
+					<img class="img" src="images/cbt-nuggetstyle.jpg"></a>
+					<hr>
+					<p class="fig">Design system and specification documentation.</p>
+
+					<br>
+
+					<p>
+						In addition to remote and in-person moderated usability testing, we validated success by monitoring our primary KPIs, measuring MAU and session data in Fabric analytics and App Store reviews. Currently iOS and Android are both 5-star apps.
+					</p>
+
+					<hr class="lead-hr">
+
+					<img class="img" src="images/cbt-appstore.jpg"></a>
+					<hr>
+					<p class="fig">Available now in the <a href="https://itunes.apple.com/us/app/cbt-nuggets/id558715245?mt=8">Apple</a>, <a href="https://play.google.com/store/apps/details?id=com.cbtnuggets.ittraining.tablet">Android</a> and <a href="https://www.microsoft.com/en-us/store/p/cbt-nuggets/9nblggh4sbbs">Windows</a> app stores.</p>
+
+					<br>
+
+					<p>
+						<b>Date:</b> May 2014 - September 2017<br>
+						<b>Company:</b> CBT Nuggets<br>
+						<b>Project:</b> CBTN Training Apps<br>
+						<b>Role:</b> Design Lead<br>
+						<b>Team:</b> 7 software engineers, 2 stakeholders, 2 quality assurance testers.
+
+					</p>
+
+
+					<hr class="lead-hr">
+
+					<br>
+
+					<h1>Learner Experience 2.0</h1>
+
+					<p>
+						We built an app suite that increased engagement and renewals by making our content available anytime, anywhere but to revolutionize the learning experience, we learned that we needed to re-imagine it completely.
+					</p>
+
+					<hr class="lead-hr">
+
+					<img class="img" src="images/cbt-lx2-1.jpg"></a>
+					<hr>
+					<p class="fig">Experience centers around a goal oriented Learning Path.</p>
+
+					<br>
+
+					<p>
+						The interface is separated into two spaces: The 2/3, which contains the learning content, and the 1/3, which contains mobile app-like auxiliary controls like notes, quizzes, games, browse and search. In an instance where two concurrent devices are present, these modes are meant to be able to break into their own individual devices but synchronously maintain the learning experience.
+					</p>
+
+					<hr class="lead-hr">
+
+					<img class="img" src="images/cbt-lx2-2.jpg"></a>
+					<hr>
+					<p class="fig">Dual modalities. 1/3 and 2/3.</p>
+
+					<br>
+
+					<p>
+						Learner Experience 2.0 will replace the CBTN training app and become the preferred method for watching CBT Nuggets learning content.
+					</p>
+
+					<hr class="lead-hr">
+
+					<img class="img" src="images/cbt-lx2-3.jpg"></a>
+					<hr>
+					<p class="fig">Quiz experience.</p>
+
+					<br>
+
+					<p>
+						<b>Date:</b> May 2017 - Present<br>
+						<b>Company:</b> CBT Nuggets<br>
+						<b>Project:</b> Learner Experience 2.0<br>
+						<b>Role:</b> Design Lead<br>
+						<b>Team:</b> 7 software engineers, 2 stakeholders, 2 quality assurance testers.
+
 					</p>
 
 
 				</div>
-
-
 
 				<div class="content-sub">
 
