--- a/amazon.html
+++ b/amazon.html
@@ -21,15 +21,17 @@
 						<a href="index.html">chriseddie.com</a> <span class="crumb"> / </span> Amazon
 					</p>
 
+					<h1>Cloud Player Recommendations</h1>
+
 					<p>
 						I'm working on getting my work up here. Stay tuned!
 					</p>
 
 					<hr class="lead-hr">
 
-					<img class="img" src="images/.jpg">
+					<!-- <img class="img" src="images/.jpg">
 					<hr>
-					<p class="fig">Description</p>
+					<p class="fig">Description</p> -->
 
 					<br>
 
