--- a/google.html
+++ b/google.html
@@ -21,24 +21,91 @@
 						<a href="index.html">chriseddie.com</a> <span class="crumb"> / </span> Google
 					</p>
 
+					<h1>Immersive Knowledge Panels</h1>
+
 					<p>
-						I'm working on getting my work up here. Stay tuned!
+						The Knowledge UX team (Google Search) was exploring the concept of an immersive search query experience for varying topics. My query was “World Religion”. Once immersed in the knowledge panel, users could explore a consistent presentation of information for various sub topics.
 					</p>
 
 					<hr class="lead-hr">
 
-					<img class="img" src="images/.jpg">
+					<img class="img" src="images/google-01.jpg">
 					<hr>
-					<p class="fig">Description</p>
+					<p class="fig">Home screen and cover of sub topic.</p>
+
+					<br>
+
+					<p>
+						Once a user had immersed in a sub topic, information was rolled up into information paths, such as Demographics and History. This content was comprised of top search results from trusted sources.
+					</p>
+
+					<hr class="lead-hr">
+
+					<img class="img" src="images/google-02.jpg">
+					<hr>
+					<p class="fig">Sub topic information paths.</p>
+
+					<br>
+
+					<h1>Search Pagination Redesign</h1>
+
+					<p>
+						Working as a designer on one of the world’s most trafficked pages on the internet came with many challenges. Redesigning search pagination on mobile was a seemingly small, but monumental effort.
+					</p>
+
+					<hr class="lead-hr">
+
+					<img class="img" src="images/google-04.jpg">
+					<hr>
+					<p class="fig">Spacebar design.</p>
+
+					<br>
+
+					<p>
+						All pagination controls rolled up into a single card which made for a clean presentation and an easily tappable surface.
+					</p>
+
+					<hr class="lead-hr">
+
+					<img class="img" src="images/google-03.jpg">
+					<hr>
+					<p class="fig">Progressive disclosure and redlines.</p>
+
+					<br>
+
+					<h1>Cards on Search</h1>
+
+					<p>
+						One of the largest launches I was able to participate in was adding “cards” to Google Search. I worked closely as the point of contact with a team of engineers to make sure every detail was perfect.
+					</p>
+
+					<hr class="lead-hr">
+
+					<img class="img" src="images/google-05.jpg">
+					<hr>
+					<p class="fig">Redline sent to engineers to "cardify" Search.</p>
+
+					<br>
+
+					<h1>"Monroe"</h1>
+
+					<p>
+						Monroe was an exploration in beautifying Google Search. Much of the exploratory thinking that came from this project inspired what became Material Design.
+					</p>
+
+					<hr class="lead-hr">
+
+					<img class="img" src="images/google-06.jpg">
+					<hr>
+					<p class="fig">Still image from a Monroe prototype.</p>
 
 					<br>
 
 					<p>
 						<b>Date:</b> 2013 - 2014<br>
 						<b>Company:</b> Google<br>
-						<b>Project:</b> Knowledge UX<br>
 						<b>Role:</b> UI Designer<br>
-						<b>Team:</b> All the people.
+						<b>Team:</b> Knowledge UX
 
 					</p>
 
