--- a/mf.html
+++ b/mf.html
@@ -27,9 +27,9 @@
 
 					<hr class="lead-hr">
 
-					<img class="img" src="images/.jpg">
+					<!-- <img class="img" src="images/.jpg">
 					<hr>
-					<p class="fig">Description</p>
+					<p class="fig">Description</p> -->
 
 					<br>
 
