--- a/mockfolio.html
+++ b/mockfolio.html
@@ -21,6 +21,8 @@
 						<a href="index.html">chriseddie.com</a> <span class="crumb"> / </span> Mockfol.io
 					</p>
 
+					<h1>Mockfol.io</h1>
+
 					<p>
 						Mockfol.io is a personal project created out of the need for a better way to share design work with others. While working for a company as a remote designer, I needed an easy way to present designs to stakeholders without physically being present and a solution for cataloging design specifications without creating bloated PDFs.
 					</p>
