--- a/rena.html
+++ b/rena.html
@@ -21,8 +21,10 @@
 						<a href="index.html">chriseddie.com</a> <span class="crumb"> / </span> ReNA Fitness
 					</p>
 
+					<h1>ReNA Training App</h1>
+
 					<p>
-						I'm working on getting my work up here. Stay tuned!
+						ReNA Fitness is a bodyweight high-intensity interval training system based in Eugene Oregon.  After experiencing the effectiveness of the program I immediately got involved with the founder. A retired olympic athlete coach and obsessive exercise tinkerer.  After creating and running my own brick and mortar ReNA studio as an instructor for 3 years, I realized the best way to expose more people to ReNA was to get it online.
 					</p>
 
 					<hr class="lead-hr">
@@ -34,8 +36,22 @@
 					<br>
 
 					<p>
-						I'm working on getting my work up here. Stay tuned!
+						The ReNA Fitness training app distributes pre-recorded video workout sessions to subscribers the same day they are recorded via an app for iOS, Android and the Web. Training content is delivered via JSON generated from a Ruby on Rails web app we call “Studio”.
 					</p>
+
+					<hr class="lead-hr">
+
+					<img class="img" src="images/rena-studio.jpg">
+					<hr>
+					<p class="fig">ReNA "Studio" backend.</p>
+
+					<br>
+
+					<p>
+						The home screen consists of a timeline UI. In ReNA, training is done in 11 week cycles with 4 training sessions per week. Athletes can add the current cycle to their timeline or add a past cycle if they’re training on their own independently. The latest workout is queued in the top position so the athlete can easily pick up where they left off. Completed workouts are denoted with a green orb.
+					</p>
+
+					<br>
 
 					<hr class="lead-hr">
 
@@ -46,7 +62,7 @@
 					<br>
 
 					<p>
-						I'm working on getting my work up here. Stay tuned!
+						In the training view athletes can view the workouts in a cycle. OnTap of a workout, a detail view is launched in a modal where the workout is displayed and the video can be played. Videos can be cast for a group training experience using Airplay and Chromecast.
 					</p>
 
 					<hr class="lead-hr">
@@ -58,7 +74,7 @@
 					<br>
 
 					<p>
-						I'm working on getting my work up here. Stay tuned!
+						An exhaustive form library is included to help athletes practice correct form. When a movement is chosen a detail screen displays the intricacies of the movement as well as a video demonstration.
 					</p>
 
 					<hr class="lead-hr">
@@ -70,7 +86,7 @@
 					<br>
 
 					<p>
-						I'm working on getting my work up here. Stay tuned!
+						Details of the design system were documented and shared with 3 software engineers to build the apps for iOS and Android.
 					</p>
 
 					<hr class="lead-hr">
