more work updated

--- a/amazon-music.html
+++ b/amazon-music.html
@@ -18,7 +18,7 @@
 
 				<div class="content-sub">
 					<p class="breadcrumb">
-						<a href="index.html">chriseddie.com</a> <span class="crumb"> / </span> Amazon Music
+						<a href="index.html"><img class="back-btn-crumb" src="images/back.svg"></a><a href="index.html">chriseddie.com</a> <span class="crumb"> / </span> Amazon Music
 					</p>
 
 					<h1>Cloud Player Native</h1>
