--- a/atlas.html
+++ b/atlas.html
@@ -14,14 +14,14 @@
 		<div class="wrap">
 
 			<div class="card">
-				<img class="img-top" src="images/amazon-header.jpg">
+				<img class="img-top" src="images/atlas-header.jpg">
 
 				<div class="content-sub">
 					<p class="breadcrumb">
 						<a href="index.html"><img class="back-btn-crumb" src="images/back.svg"></a><a href="index.html">chriseddie.com</a> <span class="crumb"> / </span> Amazon
 					</p>
 
-					<h1>Cloud Player Recommendations</h1>
+					<h1>Atlas Music Board</h1>
 
 					<p>
 						I'm working on getting my work up here. Stay tuned!
@@ -29,21 +29,47 @@
 
 					<hr class="lead-hr">
 
-					<!-- <img class="img" src="images/.jpg">
+					<img class="img" src="images/atlas-01.jpg">
 					<hr>
-					<p class="fig">Description</p> -->
+					<p class="fig">Description</p>
+
+					<br>
+
+					<p>
+						I'm working on getting my work up here. Stay tuned!
+					</p>
+
+					<hr class="lead-hr">
+
+					<br>
+
+					<img class="img" src="images/atlas-02.jpg">
+					<hr>
+					<p class="fig">Description</p>
+
+					<br>
+
+					<p>
+						I'm working on getting my work up here. Stay tuned!
+					</p>
+
+					<hr class="lead-hr">
+
+					<br>
+
+					<img class="img" src="images/atlas-03.jpg">
+					<hr>
+					<p class="fig">Description</p>
 
 					<br>
 
 					<p>
 						<b>Date:</b> 2011 - 2012<br>
-						<b>Company:</b> Amazon<br>
-						<b>Project:</b> Music Content & Community<br>
-						<b>Role:</b> UI Designer<br>
-						<b>Team:</b> 10 software engineers, 1 product manager.
-
+						<b>Company:</b> Arboreal, LLC<br>
+						<b>Project:</b> Atlas (Listenlist 2.0)<br>
+						<b>Role:</b> Co-Founder / Design<br>
+						<b>Team:</b> Isaac Overacker: Co-Founder / Development
 					</p>
-
 
 				</div>
 
