--- a/cbtn.html
+++ b/cbtn.html
@@ -18,7 +18,7 @@
 
 				<div class="content-sub">
 					<p class="breadcrumb">
-						<a href="index.html">chriseddie.com</a> <span class="crumb"> / </span> CBT Nuggets
+						<a href="index.html"><img class="back-btn-crumb" src="images/back.svg"></a><a href="index.html">chriseddie.com</a> <span class="crumb"> / </span> CBT Nuggets
 					</p>
 
 					<h1>CBTN Training Apps</h1>
@@ -143,7 +143,7 @@
 
 					<img class="img" src="images/cbt-lx2-1.jpg"></a>
 					<hr>
-					<p class="fig">Experience centers around a goal oriented Learning Path.</p>
+					<p class="fig">Experience centers around a goal-oriented Learning Path.</p>
 
 					<br>
 
