--- a/index.html
+++ b/index.html
@@ -52,13 +52,41 @@
 					<div class="flex-container">
 						<div class="flex-item left">
 
-							<h2><a href="mockfolio.html">Mockfolio</a></h2>
+							<h2><a href="scann.html">Scann</a></h2>
+							<p>06.2017</p>
+							<p>Music accessibility app</p>
+							<p><a href="scann.html">View project &#187;</a></p>
+
+						</div>
+						<div class="flex-item-timeline"><a href="scann.html"><div class="project-circle"></div></a></div>
+						<div class="flex-item"></div>
+					</div>
+
+
+					<div class="flex-container">
+						<div class="flex-item left"></div>
+						<div class="flex-item-timeline"><a href="mockfolio.html"><div class="project-circle"></div></a></div>
+						<div class="flex-item">
+
+							<h2><a href="mockfolio.html">Mockfol.io</a></h2>
 							<p>02.2017</p>
 							<p>Design presentation tool</p>
 							<p><a href="mockfolio.html">View project &#187;</a></p>
 
 						</div>
-						<div class="flex-item-timeline"><a href="mockfolio.html"><div class="project-circle"></div></a></div>
+					</div>
+
+
+					<div class="flex-container">
+						<div class="flex-item left">
+
+							<h2><a href="atlas.html">Atlas</a></h2>
+							<p>11.2015</p>
+							<p>Social music app</p>
+							<p><a href="atlas.html">View project &#187;</a></p>
+
+						</div>
+						<div class="flex-item-timeline"><a href="atlas.html"><div class="project-circle"></div></a></div>
 						<div class="flex-item"></div>
 					</div>
 
