--- a/listenlist.html
+++ b/listenlist.html
@@ -18,7 +18,7 @@
 
 				<div class="content-sub">
 					<p class="breadcrumb">
-						<a href="index.html">chriseddie.com</a> <span class="crumb"> / </span> Listenlist
+						<a href="index.html"><img class="back-btn-crumb" src="images/back.svg"></a><a href="index.html">chriseddie.com</a> <span class="crumb"> / </span> Listenlist
 					</p>
 
 					<h1>Listenlist</h1>
@@ -82,7 +82,6 @@
 						<b>Project:</b> Listenlist (fka Listn)<br>
 						<b>Role:</b> Co-Founder / Design<br>
 						<b>Team:</b> Isaac Overacker: Co-Founder / Development
-
 					</p>
 
 
