--- a/rena.html
+++ b/rena.html
@@ -18,7 +18,7 @@
 
 				<div class="content-sub">
 					<p class="breadcrumb">
-						<a href="index.html">chriseddie.com</a> <span class="crumb"> / </span> ReNA Fitness
+						<a href="index.html"><img class="back-btn-crumb" src="images/back.svg"></a><a href="index.html">chriseddie.com</a> <span class="crumb"> / </span> ReNA Fitness
 					</p>
 
 					<h1>ReNA Training App</h1>
