--- a/scann.html
+++ b/scann.html
@@ -22,7 +22,7 @@
 					</p>
 
 					<p>
-						Scann is completely gesture based mobile application designed specifically for the blind or eyes-free use cases. It introduces the concept of audible browsing where music is played at a given time interval (5-10s) before moving on to another point in a listener’s music library. When desired content is played the listener can force touch to pin that album and play from it.
+						Scann is a gesture-based mobile application designed specifically for the blind or eyes-free use case. It introduces the concept of audible browsing where music is played at a given time interval (5-10s) before moving on to another point in a listener’s music library. When desired content is played the listener can force touch to pin that album and play from within it.
 					</p>
 
 					<hr class="lead-hr">
@@ -34,7 +34,7 @@
 					<br>
 
 					<p>
-						Once an album is pinned the lister can swipe left or right on the screen to skip between tracks within the album. When the listener is ready to return to browsing they simply force touch to unpin the album.
+						Once an album is pinned the listener can swipe left or right on the screen to skip between tracks within the album. When the listener is ready to return to browsing they simply force touch to unpin the album.
 					</p>
 
 					<hr class="lead-hr">
@@ -57,10 +57,13 @@
 				<hr>
 				<p class="fig">Interaction prototype.</p>
 
+				<br><br>
+
 					<p>
 						<b>Date:</b> June 2017<br>
 						<b>Company:</b> Arboreal, LLC<br>
 						<b>Role:</b> Designer<br>
+						<b>Team:</b> 1 software engineer
 
 					</p>
 
