More grammar updates.

--- a/google.html
+++ b/google.html
@@ -24,14 +24,14 @@
 					<h1>Immersive Knowledge Panels</h1>
 
 					<p>
-						The Knowledge UX team (Google Search) was exploring the concept of an immersive search query experience for varying topics. My query was “World Religion”. Once immersed in the knowledge panel, users could explore a consistent presentation of information for various sub topics.
+						The Knowledge UX team (Google Search) was exploring the concept of an immersive search query experience for varying topics. My query was “World Religion”. Once immersed in the knowledge panel, users could explore a consistent presentation of information for various subtopics.
 					</p>
 
 					<hr class="lead-hr">
 
 					<img class="img" src="images/google-01.jpg">
 					<hr>
-					<p class="fig">Home screen and cover of sub topic.</p>
+					<p class="fig">Home screen and a cover of subtopic.</p>
 
 					<br>
 
@@ -43,7 +43,7 @@
 
 					<img class="img" src="images/google-02.jpg">
 					<hr>
-					<p class="fig">Sub topic information paths.</p>
+					<p class="fig">Subtopic information paths.</p>
 
 					<br>
 
@@ -97,7 +97,7 @@
 
 					<img class="img" src="images/google-06.jpg">
 					<hr>
-					<p class="fig">Still image from a Monroe prototype.</p>
+					<p class="fig">A still image from a Monroe prototype.</p>
 
 					<br>
 
