--- a/mockfolio.html
+++ b/mockfolio.html
@@ -39,7 +39,7 @@
 
 					<br>
 					<p>
-						Each project is organized by sections, pages and screens. A section can have many pages and a page can have many screens. Each screen has a notes section where specific details about the design, behaviors and functionality are listed. Designers can link directly to each screen from an external source, making it handy to reference a design in a Slack conversation or an email.
+						Each project is organized into sections, pages, and screens. A section can have many pages and a page can have many screens. Each screen has a notes section where specific details about the design, behaviors, and functionality are listed. Designers can link directly to each screen from an external source, making it handy to reference a design in a Slack conversation or an email.
 					</p>
 
 					<hr class="lead-hr">
@@ -68,12 +68,12 @@
 
 					<img class="img" src="images/mockfolio-backend-1.jpg">
 					<hr>
-					<p class="fig">Displaying project sectioins in the backend editor.</p>
+					<p class="fig">Displaying project sections in the backend editor.</p>
 
 					<br>
 
 					<p>
-						When creating a screen, designers can add detailed annotations or notes and writers can add to a separate content section. Designs are uploaded and stored using an Amazon S3 service.
+						When creating a screen, designers can add detailed annotations or notes and writers can add copy to a separate content section. Designs are uploaded and stored using an Amazon S3 service.
 					</p>
 
 					<hr class="lead-hr">
