--- a/rena.html
+++ b/rena.html
@@ -24,7 +24,7 @@
 					<h1>ReNA Training App</h1>
 
 					<p>
-						ReNA Fitness is a bodyweight high-intensity interval training system based in Eugene Oregon.  After experiencing the effectiveness of the program I immediately got involved with the founder. A retired olympic athlete coach and obsessive exercise tinkerer.  After creating and running my own brick and mortar ReNA studio as an instructor for 3 years, I realized the best way to expose more people to ReNA was to get it online.
+						ReNA Fitness is a bodyweight high-intensity interval training system based in Eugene Oregon.  After experiencing the effectiveness of the program I immediately got involved with the founder. A retired Olympic athlete coach and obsessive exercise tinkerer.  After creating and running my own brick and mortar ReNA studio as an instructor for 3 years, I realized the best way to expose more people to ReNA was to get it online.
 					</p>
 
 					<hr class="lead-hr">
@@ -36,7 +36,7 @@
 					<br>
 
 					<p>
-						The ReNA Fitness training app distributes pre-recorded video workout sessions to subscribers the same day they are recorded via an app for iOS, Android and the Web. Training content is delivered via JSON generated from a Ruby on Rails web app we call “Studio”.
+						The ReNA Fitness training app distributes pre-recorded video workout sessions to subscribers the same day they are recorded via an app for iOS, Android, and the Web. Training content is delivered via JSON generated from a Ruby on Rails web app we call “Studio”.
 					</p>
 
 					<hr class="lead-hr">
@@ -48,7 +48,7 @@
 					<br>
 
 					<p>
-						The home screen consists of a timeline UI. In ReNA, training is done in 11 week cycles with 4 training sessions per week. Athletes can add the current cycle to their timeline or add a past cycle if they’re training on their own independently. The latest workout is queued in the top position so the athlete can easily pick up where they left off. Completed workouts are denoted with a green orb.
+						The home screen consists of a timeline UI. In ReNA, training is done in 11-week cycles with 4 training sessions per week. Athletes can add the current cycle to their timeline or add a past cycle if they’re training on their own independently. The latest workout is queued in the top position so the athlete can easily pick up where they left off. Completed workouts are denoted with a green orb.
 					</p>
 
 					<br>
@@ -57,12 +57,12 @@
 
 					<img class="img" src="images/rena-02.jpg">
 					<hr>
-					<p class="fig">Timeline screen (home screen) and scrolled state.</p>
+					<p class="fig">Timeline screen (home screen) and scroll state.</p>
 
 					<br>
 
 					<p>
-						In the training view athletes can view the workouts in a cycle. OnTap of a workout, a detail view is launched in a modal where the workout is displayed and the video can be played. Videos can be cast for a group training experience using Airplay and Chromecast.
+						In the training view, athletes can view the workouts in a cycle. OnTap of a workout, a detail view is launched in a modal where the workout is displayed and the video can be played. Videos can be cast for a group training experience using Airplay and Chromecast.
 					</p>
 
 					<hr class="lead-hr">
