Atlas and tweaks

--- a/amazon-music.html
+++ b/amazon-music.html
@@ -24,7 +24,7 @@
 					<h1>Cloud Player Native</h1>
 
 					<p>
-						I'm working on getting my work up here. Stay tuned!
+						I'm currently working on getting work samples here.
 					</p>
 
 					<hr class="lead-hr">
@@ -38,7 +38,7 @@
 					<p>
 						<b>Date:</b> 2012 - 2013<br>
 						<b>Company:</b> Amazon (A2Z Development Center)<br>
-						<b>Project:</b> Cloud Player<br>
+						<b>Project:</b> Cloud Player Native<br>
 						<b>Role:</b> UI Designer<br>
 						<b>Team:</b> 20 software engineers, 1 product manager.
 
