--- a/amazon.html
+++ b/amazon.html
@@ -24,7 +24,7 @@
 					<h1>Cloud Player Recommendations</h1>
 
 					<p>
-						I'm working on getting my work up here. Stay tuned!
+						I'm currently working on getting work samples here.
 					</p>
 
 					<hr class="lead-hr">
@@ -38,7 +38,7 @@
 					<p>
 						<b>Date:</b> 2011 - 2012<br>
 						<b>Company:</b> Amazon<br>
-						<b>Project:</b> Music Content & Community<br>
+						<b>Project:</b> Cloud Player Recommendations<br>
 						<b>Role:</b> UI Designer<br>
 						<b>Team:</b> 10 software engineers, 1 product manager.
 
