--- a/atlas.html
+++ b/atlas.html
@@ -24,19 +24,21 @@
 					<h1>Atlas Music Board</h1>
 
 					<p>
-						I'm working on getting my work up here. Stay tuned!
+						Atlas (working title) is a visual pinboard for music discovery and exploration. Users can search millions of songs in the Apple MusicKit database and pin their favorite discoveries to a board that can be shared with friends and identifies trending artists, albums, and songs.<br><br>
+
+						A reimagined metaphor of my app <a href="listenlist.html">Listenlist</a>.
 					</p>
 
 					<hr class="lead-hr">
 
 					<img class="img" src="images/atlas-01.jpg">
 					<hr>
-					<p class="fig">Description</p>
+					<p class="fig">Main pinboard and trending artists, albums, and songs.</p>
 
 					<br>
 
 					<p>
-						I'm working on getting my work up here. Stay tuned!
+						Users can tap on pinned items to see more details and listen to full album discographies and read biographies about artists.
 					</p>
 
 					<hr class="lead-hr">
@@ -45,12 +47,12 @@
 
 					<img class="img" src="images/atlas-02.jpg">
 					<hr>
-					<p class="fig">Description</p>
+					<p class="fig">Artist and album detail screens.</p>
 
 					<br>
 
 					<p>
-						I'm working on getting my work up here. Stay tuned!
+						A minimalistic UI allows for simplistic search and playback functionality that floats on top of the interface in a modal view.
 					</p>
 
 					<hr class="lead-hr">
@@ -59,7 +61,7 @@
 
 					<img class="img" src="images/atlas-03.jpg">
 					<hr>
-					<p class="fig">Description</p>
+					<p class="fig">Search and now playing modal.</p>
 
 					<br>
 
