--- a/mf.html
+++ b/mf.html
@@ -22,7 +22,7 @@
 					</p>
 
 					<p>
-						I'm working on getting my work up here. Stay tuned!
+						I'm currently working on getting work samples here.
 					</p>
 
 					<hr class="lead-hr">
